----------
v6.0.0-git
----------

[mms] Add ability to edit list of safe addresses used with the
      image_replacement preference.
[mms] Add attachment download links to smartmobile view (Request #11379).
[mms] Indicate deleted messages with strikethrough in smartmobile mailbox
      listing (Request #11362).
[mms] Show polled children in smartmobile folder list when parent mailbox is
      not polled (Bug #11238).
[mms] More complete handling of linked data in subject header across views
      (Bug #11372).
[mms] Add Top link to smartmobile mailbox page.
[mms] Fixes to the iTip Request handler (Bug #11264).
[mms] Fix searching in smartmobile view (Bug #11365).
[mms] Tweak smartmobile mailbox page to use mobile-style list clicking
      (Request #11364).
[mms] Fix regression in updating dynamic folder list when deleting parent
      mailboxes that contain children (Bug #11296).
[mms] Fix regression preventing compose messages from being sent in the
      smartmobile view (Bug #11342).
[jan] Allow to reset flag colors and to specify as HTML colors.
[mjr] The mailboxList API call now returns delimiter and attribute information.
[jan] Fix polling for new mail from other applications.


-----------
v6.0.0beta2
-----------

[jan] Highlight quota level in dynamic mode.
[mms] Add keyboard shortcuts to dynamic compose page (Michael Wing
      <marsfurrycreature@gmail.com>).
[mms] Fix sidebar element wrapping.
[mms] Fix regression preventing contacts popup window from working (Bug
      #11324).
[mms] Fix regression in select all checkbox on traditional mailbox page (Bug
      #11317).
[mms] Fix regression in altering sort direction in dynamic mailbox view (Bug
      #11300).
[mms] Hide empty MIME parts when displaying inline.
[mms] Fix expanding all mailboxes in dynamic view (Bug #11289).
[mms] Fix handling of identity tie-to addresses when searching for matching
      identities.
[mms] Fix recursive mailbox delete in dynamic view (Bug #11288).


-----------
v6.0.0beta1