@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Remember message selections when changing mailboxes in dynamic view.
 * [mms] Add ability to edit list of safe addresses used with the image_replacement preference.
 * [mms] Add attachment download links to smartmobile view (Request #11379).
 * [mms] Indicate deleted messages with strikethrough in smartmobile mailbox listing (Request #11362).
@@ -2704,6 +2705,7 @@
    <date>2012-08-27</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Remember message selections when changing mailboxes in dynamic view.
 * [mms] Add ability to edit list of safe addresses used with the image_replacement preference.
 * [mms] Add attachment download links to smartmobile view (Request #11379).
 * [mms] Indicate deleted messages with strikethrough in smartmobile mailbox listing (Request #11362).
